Bug 456286 - support altGlyph elements as tspans. r=roc